# concurrent

./: .gitignore
01_client-server/: README.md
01_client-server/src/: lib.rs  server.rs
02_lockfile-server/: Cargo.toml  README.md
02_lockfile-server/src/: client.rs  lib.rs  server.rs
03_process_coordination/: README.md  go.mod
03_process_coordination/src/: main.go
04_fifo/src/: lib.rs  server.rs
08_threads/: README.md
08_threads/src/: main.rs
client-server/: Cargo.toml
client-server/src/: client.rs
fifo/: Cargo.toml
fifo/src/: client.rs  server.rs
ipc-cards/: main.py  wyscig.py
ipc/src/: main.go
lockfile-server/: Cargo.toml
lockfile-server/src/: client.rs  lib.rs  main.rs  server.rs
threads/: Cargo.toml
