[package]
name = "lockfile-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
ctrlc = "3.4.1"
env_logger = "0.10.0"
log = "0.4.20"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",
]
